chore(database.yml): Add database config to pipeline and set pipeline password

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         env:
           PGHOST: localhost
           PGUSER: postgres
-          PGPASSWORD: postgres
+          PGPASSWORD: 12345
           RAILS_ENV: test
         run: |
           sudo apt-get -yqq install libpq-dev
