--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
           --health-timeout 5s
           --health-retries 5
         env:
-          POSTGRES_PASSWORD: postgres
+          POSTGRES_PASSWORD: 12345
     steps:
       - uses: actions/checkout@v2
       - name: Set up Ruby
