--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,8 +35,8 @@ jobs:
           bundle install --jobs 4 --retry 3
           bundle exec rails db:create
           bundle exec rails db:migrate
-          bundle exec rails webpacker:install
           bundle install
+          bundle exec rspec
 
       # - name: Rubocop Check
       #  run: |
