--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,7 @@ jobs:
           bundle exec rails db:create
           bundle exec rails db:migrate
           bundle install
+          bundle exec rspec
 
       # - name: Rubocop Check
       #  run: |
